# opencv_test

./: .gitignore  CMakeLists.txt  README.md
src/: binarize.cpp  bitwiseand.cpp  display_image.cpp  filter.cpp  image_arithmetic.cpp  meanstddev.cpp  moving_obj_detection.cpp  parallelfor.cpp
